<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Activity.CategoryShowActivity">

    <ImageView
        android:id="@+id/ivPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/save_bt"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/apply_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/applybt"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/add_to_favorites"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/heart"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:maxLines="1"
            android:paddingTop="@dimen/_8sdp"
            android:text="@string/add_to_fav"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <com.adsmodule.api.AdsModule.Interfaces.CustomView
        android:id="@+id/adsView0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardElevation="0dp"
        app:adType="2" />

</LinearLayout>