<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/img_onbaording1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/adsView"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_35sdp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:rotation="90"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/charging_battery" />

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ob_battery_txt" />

        </RelativeLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/title_1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/desc_1"
            android:textColor="#D9FFFFFF"
            android:textSize="14sp" />

        <LinearLayout
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_8sdp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:text="@string/next"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/btnbg"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_14sdp"
                android:layout_marginHorizontal="@dimen/_25sdp"/>

        </LinearLayout>

    </LinearLayout>

    <com.adsmodule.api.adsModule.views.NativeView
        android:id="@+id/adsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardElevation="0dp"
        android:layout_marginBottom="@dimen/_40sdp"
        app:adType="MEDIUM" />
</RelativeLayout>
