<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawLay"
    tools:context=".Activity.DashboardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:visibility="gone">

            <ImageView
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/menu" />

            <ImageView
                android:id="@+id/backbt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/backbt"
                android:visibility="gone" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_50sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:background="#26FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="batteryBtmClick">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/blur"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/battery_btm"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableTop="@drawable/battery"
                        android:fontFamily="@font/poppins"
                        android:gravity="center"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/battery"
                        android:textColor="@color/grey"
                        android:drawableTint="@color/grey"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="homeBtmClick">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/blur"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/home_btm"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/blur"
                        android:drawableTop="@drawable/home"
                        android:drawableTint="@color/white"
                        android:fontFamily="@font/poppins"
                        android:gravity="center"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/home"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="animationBtmClick">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/blur"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/animation_btm"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableTop="@drawable/animation"
                        android:drawableTint="@color/grey"
                        android:fontFamily="@font/poppins"
                        android:gravity="center"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/animation"
                        android:textColor="@color/grey"
                        android:textSize="14sp" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:menu="@menu/btm_menu"
            android:visibility="gone"/>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sidebg"
        app:headerLayout="@layout/header_lay"
        android:layout_gravity="start"/>

</androidx.drawerlayout.widget.DrawerLayout>