<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TermsOfUse">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="Terms Of Use"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/native_ads"
        android:layout_below="@id/title">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:justificationMode="inter_word"
                android:text="@string/t_o_u"
                android:textColor="@color/white"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/user_pp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="By pressing the Accept button, I declare I have read and accepted the following condition of use."
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/restrict_pp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="If we find the app is being used outside its terms of use, we may restrict access to it."
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/setting_pp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="Any type of modification to the app or its components is not allowed."
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/pp_pp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="Privacy Policy may be updated from time to time for any reason. We will notify you of any changes to our Privacy Policy by posting the new Privacy Policy here."
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/card_pp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="We do not share any kind of your Personal Data with third parties."
                        android:textColor="@color/white"
                        android:textSize="15sp" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/agreebtn"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="You can find out more information by clicking on the link"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="Following link : "
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:onClick="tmc"
                        android:text="@string/tmc"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>
<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="Following link : "
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:onClick="pp"
                        android:text="@string/pp_p"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/agreebtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="120dp"
                android:layout_marginVertical="30dp"
                android:background="@drawable/btnbg"
                android:gravity="center"
                android:text="I Agree"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <com.adsmodule.api.adsModule.views.NativeView
        android:id="@+id/native_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardElevation="0dp"
        app:adType="SMALL" />

    <!--    <LinearLayout-->
    <!--        android:id="@+id/native_ads"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="60dp"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:elevation="20dp"-->
    <!--        android:orientation="vertical"-->
    <!--        android:translationZ="20dp" />-->

</RelativeLayout>